# prog4semYudasin

lesson1/: 0  0.cpp  1  1.cpp  2  2.cpp  Cali-Dragon_v1_MMU_Body.stl  Klein (innen).3mf  Wing - Right.stl  circle.msh  dragon_body.msh  horse_rig.stl  swept_wing_airplane.stl  t2.msh  torus.msh  wing_blender.stl
lesson2/: CMakeLists.txt  myanim.cpp
lesson3/: CMakeCache.txt  Makefile  cmake_install.cmake  demo_poisson  lab3_Yudasin.cpp  poisson000000.vtu
miniproject/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  grid  grid.cpp  membrane.msh  solve  solve.cpp
miniproject/anim/: membrane-step-0.vts  membrane-step-1.vts  membrane-step-10.vts  membrane-step-100.vts  membrane-step-101.vts  membrane-step-102.vts  membrane-step-103.vts  membrane-step-104.vts  membrane-step-105.vts  membrane-step-106.vts  membrane-step-107.vts  membrane-step-108.vts  membrane-step-109.vts  membrane-step-11.vts  membrane-step-110.vts  membrane-step-111.vts  membrane-step-112.vts  membrane-step-113.vts  membrane-step-114.vts  membrane-step-115.vts  membrane-step-116.vts  membrane-step-117.vts  membrane-step-118.vts  membrane-step-119.vts  membrane-step-12.vts  membrane-step-120.vts  membrane-step-121.vts  membrane-step-122.vts  membrane-step-123.vts  membrane-step-124.vts  membrane-step-125.vts  membrane-step-126.vts  membrane-step-127.vts  membrane-step-128.vts  membrane-step-129.vts  membrane-step-13.vts  membrane-step-130.vts  membrane-step-131.vts  membrane-step-132.vts  membrane-step-133.vts  (+210 more)
